# TripViz

./: .gitignore  CLAUDE.md  README.md  TripViz-full.spec  TripViz-lean.spec  build_exe.py  pyproject.toml  start.bat  start.sh
.github/workflows/: windows-build.yml
backend/: _launcher.py  database.py  indexer.py  main.py  ml.py  models.py  requirements-ml.txt  requirements.txt
backend/routers/: detect.py  editing.py  indexing.py  kit.py  ml.py  photos.py  trips.py
backend/tests/: conftest.py  test_detect.py  test_geo.py  test_indexing.py  test_kit.py  test_launcher.py  test_ml.py  test_photos.py  test_trips.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Gallery.tsx  IndexingPanel.tsx  KitView.tsx  MLPanel.tsx  MapView.tsx  PeopleView.tsx  PhotoLightbox.tsx  TripDetector.tsx  TripReplay.tsx  TripsView.tsx
frontend/src/types/: index.ts
scripts/: build_windows.py
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/binaries/: tripviz-backend  tripviz-backend-stub.py
tauri/src-tauri/resources/backend/: .gitkeep
tauri/src-tauri/src/: lib.rs  sidecar.rs
tools/: generate_test_photos.py
tools/tests/: test_generate_test_photos.py
